update project author name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div>
         <h1>Olá,<span></span></h1>
         <h1>meu nome é<span></span></h1>
-        <h1>Paulo Moraes<span></span></h1>
+        <h1>Paulo FC Moraes<span></span></h1>
         <a href="#portfolio" type="button" class="cta">Portifólio</a>
       </div>
     </div>
