--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Projeto 2</h1>
-            <h2>Codar é daora</h2>
+            <h2>Enviando o Código para o GitHub</h2>
             <p>Já que você viu que codar e programar são a mesma coisa, é bom lembrar que a programação é o processo de
               escrita, de teste e de manutenção de um programa </p>
           </div>
