--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Projeto 1</h1>
-            <h2>Trabalhando com Git com revert</h2>
+            <h2>Trabalhando com Git com rabase</h2>
             <p>Já que você viu que codar e programar são a mesma coisa, é bom lembrar que a programação é o processo de
               escrita, de teste e de manutenção de um programa </p>
           </div>
@@ -41,7 +41,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Projeto 2</h1>
-            <h2>Enviando o Código para o GitHub utilizando revert</h2>
+            <h2>Enviando o Código para o GitHub utilizando merge e rebase</h2>
             <p>Já que você viu que codar e programar são a mesma coisa, é bom lembrar que a programação é o processo de
               escrita, de teste e de manutenção de um programa </p>
           </div>
